dev/frontend/haomibo/src/assets/css/sass/themes/piaf.light.blue.scss
$separator-color-light: #f3f3f3;
$separator-color: #d7d7d7;
$background-color: #f8f8f8;
$foreground-color : white;
$input-background: white;

$dark-btn-background: #131113;
$light-btn-background: #ececec;

$button-text-color: #fff;

$theme-color-1: #145388;
$theme-color-2: #2a93d5;
$theme-color-3: #6c90a1;
$theme-color-4: #365573;
$theme-color-5: #47799a;
$theme-color-6: #8e9599;

$primary-color: #212121;
$secondary-color: #8f8f8f;
$muted-color: #909090;

$gradient-color-1 : #3693ce;
$gradient-color-2 : #104978;
$gradient-color-3 : #3582b2;

$shadowOffsetsTop : 1 3 10 14 19;
$shadowBlursTop: 1.5 5 10 14 19;
$shadowOpacitiesTop: 0.04 0.1 0.19 0.25 0.3;

$shadowOffsetsBottom : 1 3 6 10 15;
$shadowBlursBottom: 3 6 6 5 6;
$shadowOpacitiesBottom: 0.04 0.1 0.2 0.22 0.22;

// begin - menu colors
$navbar-background-color: #23293f;
$menu-foreground-color: #131728;
$menu-separator-color-light: #282c3b;
$menu-secondary-color: #757575;
$menu-theme-color-1: #0272d0;
$menu-primary-color: #e4e4e4;
$navbar-control-background-color: #131728;

// end - menu colors

$blackLogoPath: "/assets/img/logo-black.png";
$whiteLogoPath: "/assets/img/logo-white.png";
$grayLogoPath: "/assets/img/logo-gray.png";
$logoPathMobile: "/assets/img/logo-mobile.png";

$nav-height: 5rem;
$nav-background-color: #01172E;
$nav-background: "/assets/img/nav-bg.png";
$nav-background-mirror: "/assets/img/nav-bg-mirror.png";

$nav-logo-width: 7.1875rem;
$nav-logo-height: 3.125rem;
$nav-logo-start: 0.875rem;

$nav-title-width: 14.0625rem;
$nav-title-height: 1.875rem;
$nav-title-start: 9.375rem;

$nav-auth-avatar-margin-end: 0px;

$nav-auth-margin-end: 15rem;
$nav-auth-top: 0.625;

$nabvar-active-color: #1782d4;

$navbar-locale-width: 2.5rem;
$navbar-logout-width: 1.25rem;

@import "../_mixins.scss";
@import "../_piaf.style.scss";
@import "../override.scss";
@import "../../icofont.css";

